*** HEAD CONTENT *****************************************************************
**********************************************************************************

  What's new in this drop
  ================================================================================

  PRs Fixed in this Release
  ================================================================================
  3293      search does not work in inner class (1GEUQHJ)
  3249		Error message is confusing: using token instead of identifier (1GCTDYM) 
  5214      TVT: Apostrophe shows up multiple times in Java error messages in some translations (italian) 
  5263      TVT: Compiler error messages are hard for translators to understand
  3251      Types not included in code assist list for import (1GD06W9)
  5277      Code assist on assert method do an AbortException
  5070      search: missing interface method reference  
  5069      search: method reference in super missing  
  5068      search: missing method reference  

  PRs Closed in this Release
  ================================================================================
  3238      CodeAssist - no completion if cursor at string beginning (1GI3BYO)
  3271      Unable to delete attached internal source jar (1GDX215)
  3209      DCR - JM -Invalid references to IPath.getDevice() potentially breaking on Linux (1G4U1R7)
                    

**********************************************************************************
*** BUILD 206 (2.0 STREAM, v_206) ************************************************
**********************************************************************************

  What's new in this drop
  ================================================================================
  * JavaModel is no longer performing smart classpath updates when Java package
  	fragment roots are either moved or removed.

  PRs Fixed in this Release
  ================================================================================