@@ -111,6 +111,7 @@ STREAM: 2.0
 
   PRs Fixed in this Release
   ================================================================================
+  5203      Project indexing does not restrain to source files on the classpath  
   3293      search does not work in inner class (1GEUQHJ)
   3249		Error message is confusing: using token instead of identifier (1GCTDYM) 
   5214      TVT: Apostrophe shows up multiple times in Java error messages in some translations (italian) 
@@ -123,6 +124,7 @@ STREAM: 2.0
 
   PRs Closed in this Release
   ================================================================================
+  4368      Wrong match in Java Search  
   3238      CodeAssist - no completion if cursor at string beginning (1GI3BYO)
   3271      Unable to delete attached internal source jar (1GDX215)
   3209      DCR - JM -Invalid references to IPath.getDevice() potentially breaking on Linux (1G4U1R7)
